@@ -1,3 +1,9 @@
+2016-07-15  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	Backport from trunk:
+	PR fortran/71764
+	* gfortran.dg/pr71764.f90: New test.
+
 2016-07-13  Andre Vehreschild  <vehre@gcc.gnu.org>
 
 	Backport from trunk:
